<resources>
    <string name="app_name">ApplyForm</string>
    <string name="please_fill_out_the_form">Please Fill Out the Form</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
</resources>