<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:gravity="center"
    android:background="#D1D0D0"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_fill_out_the_form"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg"
        android:padding="20dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:background="@drawable/border"
            android:padding="20dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/sId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            android:inputType="number"
            android:background="@drawable/border"
            android:padding="20dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/border"
            android:padding="20dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:background="@drawable/border"
            android:padding="20dp"
            android:layout_marginBottom="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:id="@+id/pass"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/submit"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/outputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg"
        android:padding="30dp"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/outputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            />
    </LinearLayout>

</LinearLayout>
